# pitch_coach

./: .gitignore  CLAUDE.md  README.md  farcaster.json  fly.toml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/ai-voice/: page.tsx
app/dashboard/: loading.tsx  page.tsx
app/feedback/: page.tsx
app/login/: page.tsx
app/onboarding/: page.tsx
app/payments/: page.tsx
app/performance/: page.tsx
app/personas/: page.tsx
app/practice/: page.tsx
app/premium/: page.tsx
app/signup/: page.tsx
backend/: CLAUDE.md  auth.py  fly.toml  hello.py  hume_service.py  main.py  pyproject.toml  requirements.txt  scoring_service.py  test_scoring.py
components/: farcaster-miniapp.tsx
components/auth/: google-login-button.tsx  header-nav.tsx  lazy-auth-components.tsx  logout-button.tsx  require-auth.tsx  user-nav.tsx
components/layout/: app-header.tsx
components/payments/: contract-payment-button.tsx  payment-button.tsx  payment-flow.tsx  wallet-connector.tsx
components/pitch/: detailed-metrics.tsx  index.ts  login-overlay.tsx  main-pitch-interface.tsx  metrics-display.tsx  metrics-panel.tsx  recording-panel.tsx  (+1 more)
contracts/: README.md  generate-wallet.js  hardhat.config.js  package-lock.json  package.json
hooks/: use-auth.ts  use-pitch-analysis.ts  use-pitch-sessions.ts  use-usage-tracking.ts
lib/: audio-utils.ts  design-system.ts  payment-service.ts  performance-utils.ts  pitch-analysis.ts  web3-config.ts
public/: site.webmanifest
scripts/: 001_create_database_schema.sql
(+32 files in other folders)
